plugins: add docker plugin doc

--- a/plugins.html
+++ b/plugins.html
@@ -321,3 +321,9 @@ FILES         path_to_my_ssh_public_key.pub
 
 	</ul>
 </p>
+
+<p>
+	<h2 id="docker">Docker</h2>
+	Install <a href="http://www.docker.io/">docker</a> daemon in
+	the image. Uses init scripts for the official repository.
+</p>
